add scenario builder
